--- a/MyEBuyer/pom.xml
+++ b/MyEBuyer/pom.xml
@@ -23,7 +23,13 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.3</version>
+        </dependency>
+
+        <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 			<version>${spring-version}</version>
@@ -134,4 +140,15 @@
 		<spring-version>4.1.7.RELEASE</spring-version>
 		<jdk.version>1.7</jdk.version>
 	</properties>
+
+    <repositories>
+        <!--<repository>-->
+            <!--<id>osc</id>-->
+            <!--<url>http://maven.oschina.net/content/groups/public/</url>-->
+        <!--</repository>-->
+        <repository>
+            <id>maven2</id>
+            <url>http://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
 </project>
