--- a/MyEBuyer/src/main/webapp/WEB-INF/web.xml
+++ b/MyEBuyer/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,6 @@
 	</filter-mapping>
   
   <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
+    <welcome-file>login.html</welcome-file>
   </welcome-file-list>
 </web-app>
