--- a/MyEBuyer/pom.xml
+++ b/MyEBuyer/pom.xml
@@ -29,6 +29,13 @@
 			<version>2.5.3</version>
 		</dependency>
 
+		<!-- excel导出 -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.13</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
